--- a/vinkjeller.css
+++ b/vinkjeller.css
@@ -1,8 +1,36 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    max-width: 500px;
+    margin: auto;
+}
+
 .logo-container {
     display: flex;
+    width: 100%;
+    justify-content: center;
+    margin: 50px 0;
 }
 
 .logo {
     display: flex;
     flex-direction: column;
+    font-size: 5em;
+    letter-spacing: 15px;
+    align-items: end;
+    line-height: 105px;
+}
+
+main {
+    font-family: "DM Mono", monospace;
+    font-size: 1rem;
+}
+
+.app-stores {
+    display: flex;
+    justify-content: center;
+}
+
+.icon {
+    margin: 20px;
 }
